Innfører OpphørResultat, som inneholder automatisk eller manuelt vurdert opphørsårsak for en opphørsdato. Hvis saksbehandler har valgt en predefinert opphørsårsak og bruker ikke uttaler seg/ikke svarer blir denne automatisk utledet fra BostedsperiodeAvklaring. Hvis årsak "ANNET" eller bruker har uttalelse, må opphøret vurderes manuelt og OpphørResultat vil inneholde de korrigerte feltene.
Splitter VurderBosattVilkårSteg i to; Innfører et nytt steg "VurderKompletthetBostedSteg", som vurderer om behandling må én av følgende:
- Vente på etterlysning
- Opprette aksjonspunkt for manuell vurdering av inngangsvilkår eller manuell vurdering av opphørsresultatet (førstegangsbehandling/opphørsbehandling).
- Opprette opphørsresultat og gå videre til automatisk vilkårsvurdering.

Endrer det eksisterende VurderBosattVilkårSteg til å kun automatisk vurdere vilkåret basert på eksisterende OpphørResultat. Denne flyten baserer seg på at førstegangsbehandlingen vurderer vilkåret manuelt, og at VurderBosattVilkårSteg i praksis er et rent opphørssteg som ignoreres hvis det ikke finnes OpphørResultat for stp.